crates/fundle_macros_impl/tests/snapshots/newtype_errors__multi_field_named.snap
---
source: crates/fundle_macros_impl/tests/newtype_errors.rs
assertion_line: 37
expression: expand_fundle_newtype!(item)
---
::core::compile_error! {
    "fundle::newtype can only be applied to tuple structs with exactly one field"
}
