crates/fundle_macros_impl/tests/snapshots/newtype_errors__union.snap
---
source: crates/fundle_macros_impl/tests/newtype_errors.rs
expression: expand_fundle_newtype!(item)
---
::core::compile_error! {
    "expected `struct`"
}
